--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "framer-motion": "^12.7.4",
     "lenis": "^1.3.1",
     "ramda": "^0.30.1",
     "react": "^19.0.0",
